--- a/TODO
+++ b/TODO
@@ -1,3 +1,1 @@
-std::string get(arguments_t::const_iterator& arg_it) should return with string_value_t
-overload get like std::vector<std::string_value_t> get(arguments_t::const_iterator& arg_it, const char* delimiter)
-use std::optional
+implement short option parsing like this: -I/incude/path
